lams_central/web/css/_learner_base.scss
/* ... */
.table .fa {
	cursor: pointer;
}

.form-control-inline {
   width: auto !important;
   display: inline-block;
}

.rating-criteria-tag {
	width: 100%;
}
.rating-criteria-tag input[type="text"] {
	width: 100%;
}
.rating-criteria-tag .ui-widget input{
	font-family: $font-family-base;
	font-size: $font-size-small;
	line-height:1.42857143;
	padding: 2px;
}

#criterias-table {
	margin-left: 0px;
	border-bottom: inherit;
}
#criterias-table td {
	vertical-align:middle;
}

/* .....NavBar: Icon only with coloring/layout.....*/

/*small/medium side display*/
@media (min-width: 768px) {

	/*Allow content to be next to Nav*/
	.navcontent{
		position: absolute;
		width: calc(100% - 40px); /*keeps 100% minus nav size*/
		margin-left: 20px;
		float: right;
		min-height:100%;
	}
	
	/* darker outline than usual */
	nav.sidebar{
		  border-radius: $border-radius-large;
		  box-shadow: $panel-box-shadow;
	}
 
	/*Center Brand*/
	nav.sidebar.navbar.sidebar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
		margin-left: 0px;
	}
	/*Center Brand*/
	nav.sidebar .navbar-brand, nav.sidebar .navbar-header{
		text-align: center;
		width: 100%;
		margin-left: 0px;
	}

	/*Format Icons*/
	nav.sidebar a{
		padding:10px 10px 10px 12px;
	}

	nav.sidebar.slidesidemenu{
		padding:10px 10px 10px 12px;
	}
 
	/* colour in top box to match panel heading */
	nav.sidebar .navbar-nav > li:first-child{
		background-color: $gray-lightest !important;
	}

	/*adds border to bottom nav boxes except for the last box */
	nav.sidebar .navbar-nav > li{
		border-bottom: $border-thin-default-light;
		background-color: $body-bg;
	}

	nav.sidebar .navbar-nav > li:last-child{
		border-bottom: 0px;
	}

	/*allows nav box to use 100% width, style to be like panel */
	nav.sidebar .navbar-collapse, nav.sidebar .container-fluid{
		padding: 0 0px 0 0px;
		border:2px solid transparent;
	}

	/*gives sidebar width/height*/
	nav.sidebar{
		width: 180px;
		height: 100%;
		margin-left: -135px;
		float: left;
		z-index: 1000;
		margin-top: 0px;
		margin-bottom: 0px;
	}

	/*give sidebar 100% width;*/
	nav.sidebar li {
		width: 100%;
		margin-top: 3px;
		margin-bottom: 3px;
	}

 	/* Move nav to full on mouse over*/
 	nav.sidebar.expandmenu {
		margin-left: 0;
	}
	 
/* 	nav.sidebar:hover{
		margin-left: 0px;
	}
 */
 	/*for hiden things when navbar hidden*/
	.forAnimate{
		opacity: 0;
	}
	
	nav.sidebar .fa{
		font-size: 18px;
	}
	
}

/*alter portrait for displaying it in collapsed pregress bar*/
@media (min-width: 768px) and (max-width: 1329px) {
	
	nav.sidebar:not(.expandmenu) #navbar-portrait {
		float: right;
    		padding: 5px 0 0;
	}

	nav.sidebar:not(.expandmenu) #navbar-portrait img{
		border: 4px solid whitesmoke;
	}

	nav.sidebar:not(.expandmenu) .portrait-generic-sm::before{
		font-size: 30px;
		margin-right: 3px;
	}

	nav.sidebar:not(.expandmenu) p{
		padding-right: 35px;
	}
}

/*in case when portrait is not shown in a progress bar - give extra space to hamburger button*/
nav.sidebar p.no-portrait{
	padding-right: 35px;
}

/* .....NavBar: Fully showing nav bar..... */

@media (min-width: 1330px) {

	/*Allow content to be next to Nav*/
	.navcontent{
		position: absolute;
		width: calc(100% - 180px); /*keeps 100% minus nav size*/
		margin-left: 170px;
		float: right;
	}

	/*Show all nav*/
	nav.sidebar{
		margin-left: 0px;
		float: left;
	}
	/*Show hidden items on nav*/
	nav.sidebar .forAnimate{
		opacity: 1;
	}
}

/* center portrait */
nav.sidebar .navbar-nav > li:first-child{
	text-align: center;
}

nav.sidebar .navbar-nav .open .dropdown-menu>li>a:hover, nav.sidebar .navbar-nav .open .dropdown-menu>li>a:focus {
	background-color: transparent;
}

nav:hover .forAnimate{
	opacity: 1;
}
section{
	padding-left: 15px;
}

// Login page
// CSS to make the footer stick to the bottom see http://cssreset.com/how-to-keep-footer-at-bottom-of-page-with-css/ 
// Height of footer set to match the navbar at the top for visual reasons - it may be changed. 
.login-logo {
  background: url($login_logo) no-repeat center right;
  background-size: $login_logo_size;
  width:$login-logo_div_width;
  height:50px;
}

.login-body {
	margin:0;
	padding:0;
	height:100%;
}
.login-content{
	min-height:100%;
	position:relative;
	padding-bottom:50px;
	background: $body-bg;
}
.login-footer {
	width: 100%;
	background-color: $gray-lightest;
	font-size: 85%;
	padding-top: 15px;
	border-top: $border-thin-default-light;
	height:50px;
	position:absolute;
	bottom:0;
	left:0;
}

/* fontawesome icon x-small */
.fa-xs {
	font-size: smaller;
}

/* Growl functionality, jquery.blockUI (version: 2.38) */
.growlUI {
	width: auto;
	padding: 0px;
}

div.growlUI h1,div.growlUI h2 {
	color: white;
	padding: 0px;
	margin: 5px;
	text-align: center;
	font-size: medium;
}

// Tooltips used for learner progress and gradebook (large version)
.tooltip {
	position: absolute;
	border: $border-thin-default;
	background-color: $gray-light-mid;
	padding: 3px;
	z-index: 5;
	width: 150px;
	font-size: 0.9em;
	word-wrap: break-word;
    border-radius: $border-radius-large;
    @include box-shadow(0 5px 10px rgba(0,0,0,.2));
}

.tooltip-lg{
	display: none;
    position:absolute;
	border: $border-thin-default;
    background-color:$gray-light-mid;
    padding:5px;
    width:250px;
    font-size: 1.1em;
	font-weight: bold;
	word-wrap: break-word;
    border-radius: $border-radius-large;
    @include box-shadow(0 5px 10px rgba(0,0,0,.2));
}


// clickable panel created in CKEditor
.lams-bootpanel .clickable {
    cursor: pointer;
}

.lams-bootpanel .clickable .fa {
    background: rgba(0, 0, 0, 0.15);
    display: inline-block;
    padding: 5px 7px;
    border-radius: 4px;
    margin-right: -7px;
}

.lams-bootpanel .panel-heading span {
    margin-top: -20px;
}

// Image Gallery
.caption-heading {
	color: $brand-primary; 
	font-style: italic;
	font-size: $font-size-base;
}

.caption-description {
	color: $text-color; 
	font-style: italic;
	font-size: $font-size-small;
}
/* ... */

